webpack configured and code refactored to response its requirements

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,15 +16,15 @@
   <div class="wrapper">
     <header class="header">
       <div class="header__logo">
-        <img srcset="../assets/Яндекс_Дом@1x.png 1x,
-                     ../assets/Яндекс_Дом@2x.png 2x"
-             src="../assets/Яндекс_Дом@1x.png"
+        <img srcset="/assets/Яндекс_Дом@1x.png 1x,
+                     /assets/Яндекс_Дом@2x.png 2x"
+             src="/assets/Яндекс_Дом@1x.png"
              alt="Яндекс Дом">
       </div>
       <div class="header__menu-toggle">
-        <img srcset="../assets/icon_list_m@1x.png 1x,
-                     ../assets/icon_list_m@2x.png 2x"
-             src="../assets/icon_list_m@1x.png"
+        <img srcset="/assets/icon_list_m@1x.png 1x,
+                     /assets/icon_list_m@2x.png 2x"
+             src="/assets/icon_list_m@1x.png"
              alt="Menu">
       </div>
       <nav>
@@ -58,9 +58,9 @@
                   <div class="whether-widget__place-name">За окном</div>
                   <div class="whether-widget__temperature">+19</div>
                   <img class="whether-widget__icon"
-                       srcset="../assets/cloud-drizzle@1x.png 1x,
-                               ../assets/cloud-drizzle@2x.png 2x"
-                       src="../assets/cloud-drizzle@1x.png"
+                       srcset="/assets/cloud-drizzle@1x.png 1x,
+                               /assets/cloud-drizzle@2x.png 2x"
+                       src="/assets/cloud-drizzle@1x.png"
                        alt="cloudy and drizzle">
                 </div>
               </div>
@@ -76,14 +76,14 @@
             <div class="section-header__name">Избранные сценарии</div>
             <div class="pagination">
               <img class="pagination__arrow arrow_direction_left"
-                   srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
-                           ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
-                   src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                   srcset="/assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                           /assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
+                   src="/assets/Icons_/Arrow_Right_/arrow@1x.png"
                    alt="<">
               <img class="pagination__arrow arrow_direction_right"
-                   srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
-                           ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
-                   src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                   srcset="/assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                           /assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
+                   src="/assets/Icons_/Arrow_Right_/arrow@1x.png"
                    alt=">">
             </div>
           </div>
@@ -111,9 +111,9 @@
               <div class="filter-menu-dropdown__button dropdown-button">
                 <span class="dropdown-button__name">Все</span>
                 <img class="dropdown-button__arrow"
-                     srcset="../assets/Icons_/Arrow_Down_/arrow@1x.png 1x,
-                           ../assets/Icons_/Arrow_Down_/arrow@2x.png 2x"
-                     src="../assets/Icons_/Arrow_Down_/arrow@1x.png" alt="&darr;"></div>
+                     srcset="/assets/Icons_/Arrow_Down_/arrow@1x.png 1x,
+                           /assets/Icons_/Arrow_Down_/arrow@2x.png 2x"
+                     src="/assets/Icons_/Arrow_Down_/arrow@1x.png" alt="&darr;"></div>
               <ul class="filter-menu-dropdown__content">
                 <li class="filter-menu-dropdown__item">Все</li>
                 <li class="filter-menu-dropdown__item">Кухня</li>
@@ -124,14 +124,14 @@
             </div>
             <div class="pagination">
               <img class="pagination__arrow arrow_direction_left"
-                   srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
-                           ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
-                   src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                   srcset="/assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                           /assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
+                   src="/assets/Icons_/Arrow_Right_/arrow@1x.png"
                    alt="<">
               <img class="pagination__arrow arrow_direction_right"
-                   srcset="../assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
-                           ../assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
-                   src="../assets/Icons_/Arrow_Right_/arrow@1x.png"
+                   srcset="/assets/Icons_/Arrow_Right_/arrow@1x.png 1x,
+                           /assets/Icons_/Arrow_Right_/arrow@2x.png 2x"
+                   src="/assets/Icons_/Arrow_Right_/arrow@1x.png"
                    alt=">">
             </div>
           </div>
@@ -164,6 +164,6 @@
 
 </div>
 <!--<script src="../js/app.js"></script>-->
-<script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+<script src="<%=htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 </body>
 </html>
